# hera-mlops-template

./: .gitignore  ADD-A-STEP.md  DEVELOPER.md  MECHANISMS.md  PLATFORM.md  README.md  pipeline.py  pyproject.toml  run.sh
.github/: check_steps.py
.github/workflows/: build-images.yml  pr-render.yml
config/: README.md  config.yaml  data.yaml  experiment.yaml  logging.yaml  quantization.yaml  registration.yaml  train.yaml
config/image_processing/: conservative.yaml  mosaic_default.yaml  none.yaml
config/model/: yolov11x.yaml  yolov8n.yaml  yolov8s.yaml
config/train/callbacks/: early_stopping.yaml  none.yaml
config/train/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
config/train/qat/: default_qat.yaml  no_qat.yaml
kubecore/: README.md  __init__.py  authoring.py  compose.py  derive_tree.py  enhance.py
kubecore/config/platform/: live.yaml
kubecore/local-dev/: README.md  dataset-catalog.yaml  pipeline-context.yaml
steps/: README.md
steps/compose_and_validate/: Dockerfile
steps/config_validation/: Dockerfile
steps/config_validation/app/: entry.py  manager.py
steps/config_validation/app/services/: config_validation.py
steps/dataset_loading/: Dockerfile
steps/dataset_loading/app/: entry.py  manager.py
steps/model_quantization/: Dockerfile
steps/model_quantization/app/: entry.py
steps/model_registration/: Dockerfile
steps/model_registration/app/: entry.py
steps/model_training/: Dockerfile
steps/model_training/app/: entry.py
steps/qat_finetune/: Dockerfile
steps/qat_finetune/app/: entry.py
tests/: test_engine.py
(+2 files in other folders)
